--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to My Baseball-Themed Website!</title>
+    <title>Alex Bradshaientist</title>
     <style>
       body {
         background-color: white;
@@ -19,7 +19,7 @@
         color: red;
         overflow: hidden;
         white-space: nowrap;
-        animation: typing 3s steps(25) forwards;
+        animation: typing 6s steps(100) forwards;
       }
 
       #baseball-image {
@@ -47,10 +47,10 @@
   </head>
   <body>
     <div class="title-container">
-      <h1>Welcome to My Baseball-Themed Website!</h1>
+      <h1>Alex Bradshaw, Data Scientist</h1>
     </div>
     <img id="baseball-image" src="https://i.imgur.com/l4W4y0j.jpg" alt="Baseball image">
-    <p>Hi, I'm [Your Name] and I love baseball! Whether it's playing in the backyard with my friends, watching my favorite team on TV, or keeping up with the latest stats and scores, baseball has been a big part of my life for as long as I can remember.</p>
+    <p>Hi, I'm Alex Bradshaw and I love baseball! Whether it's playing in the backyard with my friends, watching my favorite team on TV, or keeping up with the latest stats and scores, baseball has been a big part of my life for as long as I can remember.</p>
     <p>On this website, you'll find all sorts of cool stuff related to baseball, from game highlights and analysis to interviews with players and coaches to my own personal stories and experiences. So sit back, relax, and let's talk some baseball!</p>
   </body>
 </html>
