--- a/index.html
+++ b/index.html
@@ -1,56 +1,30 @@
+<!-- Alex Bradshaw -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Alex Bradshaientist</title>
-    <style>
-      body {
-        background-color: white;
-        font-family: "Arial", sans-serif;
-        color: black;
-      }
+	<head>
+  	<title>Alex Bradshaw</title>
+  	<link rel="stylesheet" type="text/css" href="index_style.css">
+  	<link rel="icon" type="image/png" href="./images/baseball_clear.png">
+	</head>
+	<body>
+			<div class="title-container">
+  				<h1>Alex Bradshaw, Data Scientist and Mathematician</h1>
+			<div id="contact">
+  			<p><pp>Email: alexbradshaw14@gmail.com | <a href="https://www.linkedin.com/in/alex-j-bradshaw/">LinkedIn</a> | 
+					<a href = "https://drive.google.com/file/d/1r7mivRfWCH4yf5-qndif3PAUTyTIAiyP/view">Resume</a> | <a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | <a href ="baseball.html">Baseball Credentials</a></pp></p>
+			</div>
+				<div id="about">
+  					<p>I am currently pursuing an M.S. in Data Science at the University of San Francisco. As a baseball player, I've cultivated a strategic and competitive mindset that drives me to exceed expectations both on and off the field. Through discipline and critical thinking, I constantly strive for greatness in all aspects of my life.</p>
 
-      .title-container {
-        text-align: center;
-      }
-
-      h1 {
-        display: inline-block;
-        text-align: center;
-        color: red;
-        overflow: hidden;
-        white-space: nowrap;
-        animation: typing 6s steps(100) forwards;
-      }
-
-      #baseball-image {
-        display: block;
-        margin: auto;
-        width: 300px;
-        height: 300px;
-      }
-
-      p {
-        font-size: 18px;
-        text-align: center;
-        margin-top: 50px;
-      }
-
-      @keyframes typing {
-        from {
-          width: 0;
-        }
-        to {
-          width: 100%;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="title-container">
-      <h1>Alex Bradshaw, Data Scientist</h1>
-    </div>
-    <img id="baseball-image" src="https://i.imgur.com/l4W4y0j.jpg" alt="Baseball image">
-    <p>Hi, I'm Alex Bradshaw and I love baseball! Whether it's playing in the backyard with my friends, watching my favorite team on TV, or keeping up with the latest stats and scores, baseball has been a big part of my life for as long as I can remember.</p>
-    <p>On this website, you'll find all sorts of cool stuff related to baseball, from game highlights and analysis to interviews with players and coaches to my own personal stories and experiences. So sit back, relax, and let's talk some baseball!</p>
-  </body>
+  					<p>Data Science Projects:</p>
+  					<ul>
+    						<li><a href="https://github.com/aydinschwa/enhance-mint">Engineered a cutting-edge photo enhancer featuring subject removal, deblur, and super resolution using GCP, Pillow, Flask, and Python</a></li>
+    						<li><a href="https://drive.google.com/file/d/1ftHXBQgbfyD8T-UfCKnwOGz36PhaCMSo/view">Reduced benchmark browsing time in a Netflix-inspired dataset using a 2^4 factorial & 20 One-Factor-At-a-Time hypothesis tests.</a></li>
+						<li><a href="https://github.com/AlexBradshaw5/ChessElo">Developed an enhanced predictive model for chess game outcomes by combining six distinct SparkMLlib models</a></li>
+						<li>Reduced benchmark MAE from 5.6 to 4.0 in a Kaggle competition by combining time series data with categorical and numerical data to predict two distinct target variables.</li>
+    						<li>Built from scratch using OOP in Python: KMeans++, spectral clustering, gradient descent, decision tree, random forest, linear regression, naíve bayes, hashtable, and pipeline to scrape data and convert to and from file types CSV, HTML, XML, & JSON</li>
+  					</ul>
+				</div>
+			</div>
+	</body>
 </html>
