--- a/baseball.html
+++ b/baseball.html
@@ -17,7 +17,7 @@
       <div class="grid">
 	<div class="grid-item">
     		<div class="caption">2016 SF City Champs @ AT&T Park</div>
-		<img src="./images/atnt bunt.jpg">
+		<img src="./images/atnt bunt.JPG">
     		<div class="description"> 
 			<a href="https://www.youtube.com/watch?v=keFVNPNxis0">(YouTube)</a>
 			<a href="https://www.sfgate.com/sports/article/Solomon-s-pitching-hitting-leadLowell-over-7463542.php">(sfgate.com)</a>
@@ -90,14 +90,14 @@
   	</div>
         <div class="grid-item">
     		<div class="caption">25K in 16IP for USF-CA Club Baseball</div>
-		<img src="./images/at usf.jpg">
+		<img src="./images/at usf.JPG">
     		<div class="description"> 
 			<a href="https://div2.clubbaseball.org/league/stats/?sort=name&sorttype=asc&season=3469e1de-1ca8-4717-a692-e87de6c5beff&team=8ed8cc4f-bf5c-4ac8-8c62-5058a0640ff8">(clubbaseball.org)</a>
 		</div>
   	</div>
 <div class="grid-item">
     		<div class="caption">Varsity Career .340 AVG, 0.99 ERA</div>
-		<img src="./images/atnt side.jpg">
+		<img src="./images/atnt side.JPG">
     		<div class="description"> 
 			<a href="https://www.maxpreps.com/ca/san-francisco/lowell-cardinals/athletes/alex-bradshaw/baseball/stats/?careerid=9b66jgtjao0cc
 ">(MaxPreps)</a>
