--- a/baseball.html
+++ b/baseball.html
@@ -16,22 +16,28 @@
       </p2>
       <div class="grid">
 	<div class="grid-item">
-    		<div class="caption">2016 SF City Champs @ AT&T Park</div>
-		<img src="./images/atnt bunt.JPG">
+    		<div class="caption">CG, 2-Hit SO @ SF State v Oak Tech 2017</div>
+		<img src="./images/new state trophy.png">
     		<div class="description"> 
-			<a href="https://www.youtube.com/watch?v=keFVNPNxis0">(YouTube)</a>
-			<a href="https://www.sfgate.com/sports/article/Solomon-s-pitching-hitting-leadLowell-over-7463542.php">(sfgate.com)</a>
-			<a href="https://thelowell.org/302/sports/spring-sports/baseball/highlights-vars-baseball-champions-protect-four-year-reign/
-">(thelowell.org)</a>
+			<a href="https://www.youtube.com/watch?v=a1gAWtPCl9U">(YouTube)</a>
+			<a href="https://www.sfexaminer.com/sports/lowell-baseball-continues-streak-of-dominance-sweeps-transbay-series/article_3a7e4413-75c0-5c42-9063-f60475d8685c.html">(sfexaminer.com)</a>
 		</div>
   	</div>
         <div class="grid-item">
-    		<div class="caption">2018 SF City Champs @ AT&T Park</div>
+    		<div class="caption">WP, 6IP, 7K, 0ER @ AT&T Park (City Champs)</div>
 		<img src="./images/atnt.jpg">
     		<div class="description">
 			<a href="https://www.youtube.com/watch?v=LAxHVLlsjl8">(YouTube)</a>
 			<a href="https://thelowell.org/175/sports/vars-baseball-makes-history-with-sixth-consecutive-championship/">(thelowell.org)</a>
 			<a href="https://www.sfgate.com/sports/article/Lowell-beats-Mission-for-6th-straight-AAA-12895848.php">(sfgate.com)</a>
+		</div>
+  	</div>
+	<div class="grid-item">
+    		<div class="caption">Varsity Career .340 AVG, 0.99 ERA (12-1)</div>
+		<img src="./images/atnt side.JPG">
+    		<div class="description"> 
+			<a href="https://www.maxpreps.com/ca/san-francisco/lowell-cardinals/athletes/alex-bradshaw/baseball/stats/?careerid=9b66jgtjao0cc
+">(MaxPreps)</a>
 		</div>
   	</div>
         <div class="grid-item">
@@ -42,7 +48,7 @@
 		</div>
   	</div>
         <div class="grid-item">
-    		<div class="caption">SF/Oak Transbay Championship Series 2018</div>
+    		<div class="caption">2B, RBI @ Laney College v Oak Tech 2018</div>
 		<img src="./images/oak tech.jpg">
     		<div class="description"> 
 			<a href="https://www.youtube.com/watch?v=n-KFEA57TBY">(YouTube)</a>
@@ -51,20 +57,22 @@
 
 		</div>
   	</div>
+	<div class="grid-item">
+    		<div class="caption">2-3, 2R, SB @ AT&T Park (City Champs)</div>
+		<img src="./images/atnt bunt.JPG">
+    		<div class="description"> 
+			<a href="https://www.youtube.com/watch?v=keFVNPNxis0">(YouTube)</a>
+			<a href="https://www.sfgate.com/sports/article/Solomon-s-pitching-hitting-leadLowell-over-7463542.php">(sfgate.com)</a>
+			<a href="https://thelowell.org/302/sports/spring-sports/baseball/highlights-vars-baseball-champions-protect-four-year-reign/
+">(thelowell.org)</a>
+		</div>
+  	</div>
         <div class="grid-item">
-    		<div class="caption">8IP, 9K, 0ER | 2/5AB @ SF State v Oak Tech 2018</div>
+    		<div class="caption">8IP, 9K, 0ER | 2B, 2-5 @ SF State v Oak Tech 2018</div>
 		<img src="./images/rooted in oakland.jpg">
     		<div class="description"> 
 			<a href="https://www.sfgate.com/sports/article/Hit-batter-with-bases-loaded-gives-Oakland-Tech-12927467.php">(sfgate.com)</a>
 </div>
-  	</div>
-        <div class="grid-item">
-    		<div class="caption">CG (7IP), 2 Hit SO @ SF State v Oak Tech 2017</div>
-		<img src="./images/transbay trophy.jpg">
-    		<div class="description"> 
-			<a href="https://www.youtube.com/watch?v=a1gAWtPCl9U">(YouTube)</a>
-			<a href="https://www.sfexaminer.com/sports/lowell-baseball-continues-streak-of-dominance-sweeps-transbay-series/article_3a7e4413-75c0-5c42-9063-f60475d8685c.html">(sfexaminer.com)</a>
-		</div>
   	</div>
         <div class="grid-item">
     		<div class="caption">Cal-Hi Sports Bay Area Players of the Week Rap</div>
@@ -93,14 +101,6 @@
 		<img src="./images/at usf.JPG">
     		<div class="description"> 
 			<a href="https://div2.clubbaseball.org/league/stats/?sort=name&sorttype=asc&season=3469e1de-1ca8-4717-a692-e87de6c5beff&team=8ed8cc4f-bf5c-4ac8-8c62-5058a0640ff8">(clubbaseball.org)</a>
-		</div>
-  	</div>
-<div class="grid-item">
-    		<div class="caption">Varsity Career .340 AVG, 0.99 ERA</div>
-		<img src="./images/atnt side.JPG">
-    		<div class="description"> 
-			<a href="https://www.maxpreps.com/ca/san-francisco/lowell-cardinals/athletes/alex-bradshaw/baseball/stats/?careerid=9b66jgtjao0cc
-">(MaxPreps)</a>
 		</div>
   	</div>
       </div>
