--- a/baseball.html
+++ b/baseball.html
@@ -10,7 +10,7 @@
       <h1>Welcome to My Baseball Page</h1>
 	<div id="contact">
   			<p>Email: alexbradshaw14@gmail.com | <a href="https://www.linkedin.com/in/alex-j-bradshaw/">LinkedIn</a> | 
-					<a href = "https://drive.google.com/file/d/1r7mivRfWCH4yf5-qndif3PAUTyTIAiyP/view">Resume</a> | <a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | <a href ="index.html">Data Science Credentials</a></p>
+					<a href = "https://drive.google.com/file/d/1goL4GpOnO7Zjd2lauVWIwzxXbnJYAtm9/view">Resume</a> | <a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | <a href ="index.html">Data Science Credentials</a></p>
 	</div>
       <p2>Below each picture is a clickable link for additional information
       </p2>
@@ -24,7 +24,7 @@
 		</div>
   	</div>
         <div class="grid-item">
-    		<div class="caption">WP, 6IP, 7K, 0ER @ AT&T Park (City Champs)</div>
+    		<div class="caption">6IP, 7K, 0ER @ AT&T Park (2018 City Champs)</div>
 		<img src="./images/atnt.jpg">
     		<div class="description">
 			<a href="https://www.youtube.com/watch?v=LAxHVLlsjl8">(YouTube)</a>
@@ -58,7 +58,7 @@
 		</div>
   	</div>
 	<div class="grid-item">
-    		<div class="caption">2-3, 2R, SB @ AT&T Park (City Champs)</div>
+    		<div class="caption">2-3, 2R, SB @ AT&T Park (2016 City Champs)</div>
 		<img src="./images/atnt bunt.JPG">
     		<div class="description"> 
 			<a href="https://www.youtube.com/watch?v=keFVNPNxis0">(YouTube)</a>
@@ -101,6 +101,13 @@
 		<img src="./images/at usf.JPG">
     		<div class="description"> 
 			<a href="https://div2.clubbaseball.org/league/stats/?sort=name&sorttype=asc&season=3469e1de-1ca8-4717-a692-e87de6c5beff&team=8ed8cc4f-bf5c-4ac8-8c62-5058a0640ff8">(clubbaseball.org)</a>
+		</div>
+  	</div>
+<div class="grid-item">
+    		<div class="caption">WP, CG, 6K, 1ER @ Big Rec</div>
+		<img src="./images/v wash.png">
+    		<div class="description"> 
+			<a href="https://www.youtube.com/watch?v=0JB1M9-HTgw">(YouTube)</a>
 		</div>
   	</div>
       </div>
