--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<li><a href="https://github.com/AlexBradshaw5/ChessElo">Developed an enhanced predictive model for chess game outcomes by combining six distinct SparkMLlib models</a></li>
 						<li>Reduced benchmark MAE from 5.6 to 4.0 in a Kaggle competition by combining time series data with categorical and numerical data to predict two distinct target variables.</li>
     						<li>Built from scratch using OOP in Python: KMeans++, spectral clustering, gradient descent, decision tree, random forest, linear regression, naíve bayes, hashtable, and pipeline to scrape data and convert to and from file types CSV, HTML, XML, & JSON</li>
+						<li>Built sorting algorithms (Quick, Merge, Selection, Radix, Bubble) from scratch in Java</li>
   					</ul>
 				</div>
 			</div>
