changed photo sized

--- a/baseball.html
+++ b/baseball.html
@@ -42,7 +42,7 @@
   	</div>
         <div class="grid-item">
     		<div class="caption">Previous Employment</div>
-		<img src="./images/schneider.png">
+		<img src="./images/schneider.jpg">
     		<div class="description"> 
 			<a href="https://pitcherperfectbaseballacademy.com/">(Website)</a>
 		</div>
@@ -76,7 +76,7 @@
   	</div>
         <div class="grid-item">
     		<div class="caption">Cal-Hi Sports Bay Area Players of the Week Rap</div>
-		<img src="./images/potw.png">
+		<img src="./images/potw.jpg">
     		<div class="description"> 
 			<a href="https://www.youtube.com/watch?v=8sTBSTPHiwY">(YouTube)</a>
 		</div>
@@ -91,7 +91,7 @@
   	</div>
         <div class="grid-item">
     		<div class="caption">ASN BAY AREA Post Game Interview</div>
-		<img src="./images/interview.png">
+		<img src="./images/interview.jpg">
     		<div class="description"> 
 			<a href="https://www.youtube.com/watch?v=o0b19zb7tOQ">(YouTube)</a>
 		</div>
@@ -105,7 +105,7 @@
   	</div>
 <div class="grid-item">
     		<div class="caption">WP, CG, 6K, 1ER @ Big Rec</div>
-		<img src="./images/v wash.png">
+		<img src="./images/v wash.jpg">
     		<div class="description"> 
 			<a href="https://www.youtube.com/watch?v=0JB1M9-HTgw">(YouTube)</a>
 		</div>
