--- a/baseball.html
+++ b/baseball.html
@@ -9,8 +9,12 @@
     <div class="container">
       <h1>Welcome to My Baseball Page</h1>
 	<div id="contact">
-  			<p>Email: alexbradshaw14@gmail.com | <a href="https://www.linkedin.com/in/alex-j-bradshaw/">LinkedIn</a> | 
-					<a href = "https://drive.google.com/file/d/1x9UrAzdJoybYOO61atKvWife-FtPeohQ/view">Resume</a> | <a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | <a href ="index.html">Data Science Credentials</a></p>
+  			<p>Email: 
+				<a href="mailto:alexbradshaw14@gmail.com">alexbradshaw14@gmail.com</a> | 
+				<a href="https://www.linkedin.com/in/alex-j-bradshaw/">LinkedIn</a> | 
+				<a href = "https://drive.google.com/file/d/1x9UrAzdJoybYOO61atKvWife-FtPeohQ/view">Resume</a> | 
+				<a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | 
+				<a href ="index.html">Data Science Page —›</a></p>
 	</div>
       <p2>Below each picture is a clickable link for additional information
       </p2>
