updated resume on baseball page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 			<div class="title-container">
   				<h1>Alex Bradshaw, Data Scientist and Mathematician</h1>
 			<div id="contact">
-  			<p><pp>Email: <a href="mailto:alexbradshaw14@gmail.com">alexbradshaw14@gmail.com</a> | <a href="https://www.linkedin.com/in/alex-j-bradshaw/">LinkedIn</a> | 
-					<a href = "https://drive.google.com/file/d/13oZw1kuxJr16A_BP4Q5b7qV_3NRZFVJf/view">Resume</a> | <a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | <a href ="baseball.html">Baseball Page —›</a></pp></p>
+  			<p><pp>Email: <a href="mailto:alexbradshaw14@gmail.com">alexbradshaw14@gmail.com</a> | 
+					<a href="https://www.linkedin.com/in/alex-j-bradshaw/">LinkedIn</a> | 
+					<a href = "https://drive.google.com/file/d/13oZw1kuxJr16A_BP4Q5b7qV_3NRZFVJf/view">Resume</a> | 
+					<a href="https://github.com/AlexBradshaw5/ChessElo">GitHub Repository</a> | 
+					<a href ="baseball.html">Baseball Page —›</a></pp></p>
 			</div>
 				<div id="about">
   					<p>I am currently pursuing an M.S. in Data Science at the University of San Francisco. As a baseball player, I've cultivated a strategic and competitive mindset that drives me to exceed expectations both on and off the field. Through discipline and critical thinking, I constantly strive for greatness in all aspects of my life.</p>
@@ -22,10 +25,11 @@
     						<li><a href="https://drive.google.com/file/d/1ftHXBQgbfyD8T-UfCKnwOGz36PhaCMSo/view">Reduced benchmark browsing time in a Netflix-inspired dataset using a 2^4 factorial & 20 One-Factor-At-a-Time hypothesis tests.</a></li>
 						<li><a href="https://github.com/AlexBradshaw5/ChessElo">Developed an enhanced predictive model for chess game outcomes by combining six distinct SparkMLlib models</a></li>
 						<li>Reduced benchmark MAE from 5.6 to 4.0 in a Kaggle competition by combining time series data with categorical and numerical data to predict two distinct target variables.</li>
-    						<li>Built from scratch using OOP in Python: Gradient descent, decision tree, random forest, linear regression, naíve bayes, hashtable, and pipeline to scrape data and convert to and from file types CSV, HTML, XML, & JSON</li>
-						<li>Built sorting algorithms (Quick, Merge, Selection, Bubble, Insertion, Radix) from scratch in Java</li>
 						<li><a href="https://colab.research.google.com/drive/1pDwkATjNECKk3z_Ycj7LCWq8pdoFEN_f">Developed an in-depth notebook that implemented KMeans++ and Spectral Clustering from scratch, explaining their theories, practical usage, and limitations.</a></li>
 						<li><a href="https://colab.research.google.com/drive/1eMKxhuXbS0qNSfCwCJac4R2nD6F5zf5K">Developed a comprehensive notebook showcasing the significance of feature importance and presented practical examples.</a></li>
+    						<li>Built from scratch using OOP in Python: Gradient descent, decision tree, random forest, linear regression, naíve bayes, hashtable, and pipeline to scrape data and convert to and from file types CSV, HTML, XML, & JSON</li>
+						<li><a href="https://github.com/AlexBradshaw5/Portfolio/tree/main/CS245/SortingAlgorithms">Built sorting algorithms (Quick, Merge, Selection, Bubble, Insertion, Radix) from scratch in Java</li>
+
 					</ul>
 				</div>
 			</div>
