--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<a href="mailto:alexbradshaw14@gmail.com">
 		<img src="./fontawesome/MySVGs/envelope-filled.svg" title="Email">
 		</a>
-		<a href="https://drive.google.com/file/d/1TqiczrHpFlECQXkLGcqzx_b_bmN5f3--/view">
+		<a href="https://drive.google.com/file/d/1nX7al3Ap-tHfGRqg_qryoxyP4PQzNGpv/view">
 		<img src="./fontawesome/MySVGs/file-pdf-filled.svg" title="Resume">
 		</a>
 		<a href="https://www.linkedin.com/in/alex-j-bradshaw/">
 		<img src="./fontawesome/MySVGs/linkedin-in.svg" title="LinkedIn">
 		</a>
-		<a href="https://github.com/AlexBradshaw5/ChessElo">
+		<a href="https://github.com/AlexBradshaw5/">
 		<img src="./fontawesome/MySVGs/github.svg" title="GitHub">
 		</a>
 		<a href="baseball.html">
