--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div id="about">
       <p>About Me:</p>
-  	<p>I am currently pursuing an M.S. in Data Science at the University of San Francisco. As a baseball player, I've cultivated a strategic and competitive mindset that drives me to exceed expectations both on and off the field. Through discipline and critical thinking, I constantly strive for greatness in all aspects of my life.</p>
+  	<p>I was born and raised in the great city of San Francisco and recently graduated with a master's in Data Science from the University of San Francisco. I also attended there for my bachelor's in mathematics and played club baseball and ultimate frisbee. As a baseball player, I've cultivated a strategic and competitive mindset that drives me to exceed expectations both on and off the field. Through discipline and critical thinking, I constantly strive for greatness in all aspects of my life.</p>
 	<p>In my free time I like to workout, listen to music, host barbecues/picnics, go out with friends, or play baseball, basketball, or ultimate frisbee. For sports people, check out my <a href="baseball.html">baseball page here</a>!</p>
     </div>
     <div id="about">
