--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a href="mailto:alexbradshaw14@gmail.com">
 		<img src="./fontawesome/MySVGs/envelope-filled.svg" title="Email">
 		</a>
-		<a href="https://drive.google.com/file/d/1nX7al3Ap-tHfGRqg_qryoxyP4PQzNGpv/view">
+		<a href="https://drive.google.com/file/d/1xB4jHCHPb5nGOmxT0CyrJ0tGgmn3jd7B/view">
 		<img src="./fontawesome/MySVGs/file-pdf-filled.svg" title="Resume">
 		</a>
 		<a href="https://www.linkedin.com/in/alex-j-bradshaw/">
@@ -32,8 +32,10 @@
     </div>
     <div id="about">
       <p>About Me:</p>
-  	<p>I was born and raised in the great city of San Francisco and recently graduated with a master's in Data Science from the University of San Francisco. I also attended there for my bachelor's in mathematics and played club baseball and ultimate frisbee. As a baseball player, I've cultivated a strategic and competitive mindset that drives me to exceed expectations both on and off the field. Through discipline and critical thinking, I constantly strive for greatness in all aspects of my life.</p>
-	<p>In my free time I like to workout, listen to music, host barbecues/picnics, go out with friends, or play baseball, basketball, or ultimate frisbee. For sports people, check out my <a href="baseball.html">baseball page here</a>!</p>
+  	<p>
+I was born and raised in San Francisco and attended the University of San Francisco where I obtained a Master's in Data Science, a Bachelor's in Mathematics, a minor in Computer Science. I chose to pursue a career in Data Science because of my passion for problem solving and computer science. In high school, my strategic and calculated approach to pitching earned me back-to-back Pitcher of the Year honors, 3 city championships, and a walk-on roster spot in USF's D1 baseball program. My competitive fire has never faded, it has only transferred into being the best at whatever I choose to do in life. That being said, enjoy my portfolio.
+	</p>
+	<p>For sports people, check out my <a href="baseball.html">baseball credentials here</a>!</p>
     </div>
     <div id="about">
   	<p>Data Science Projects:</p>
@@ -51,10 +53,13 @@
         </div>
 
         <div class="project">
-          <a href="https://github.com/AlexBradshaw5/Clustering">
-            <img src="./project_thumbnails/kmeans.png">
-          <div class="description">KMeans, KMeans++, Spectral Clustering Illustration From Scratch</div>
-	  </a>
+          <a href="https://github.com/AlexBradshaw5/AffirmativeActionSimulation">
+            <img src="./project_thumbnails/affact.png">
+          </a>
+          <div class="description">
+	  <a href="https://github.com/AlexBradshaw5/enhance-mint">
+		Why Including Race is the Most Fair and Beneficial Admission Process</a>
+	  </div>
         </div>
 
         <div class="project">
@@ -62,7 +67,7 @@
             <img src="./project_thumbnails/chess.png">
           </a>
           <div class="description"><a href="https://github.com/AlexBradshaw5/ChessElo">
-	  Pipelined into an RDD and Modeled Chess Outcomes versus Elo</a></div>
+	  ETL Pipeline and Modeling Chess Outcomes versus Elo</a></div>
         </div>
 
         <div class="project">
@@ -74,17 +79,18 @@
         </div>
 
         <div class="project">
-          <a href="https://github.com/AlexBradshaw5/Feature_Importance">
-            <img src="./project_thumbnails/feat_imp.png">
-          <div class="description">Value of Feature Importance</div>
-          </a>
+          <a href="https://github.com/AlexBradshaw5/NBA_Playoffs">
+            <img src="./project_thumbnails/NBA_bracket.jpeg">
+          <div class="description">Using AI/ML to predict the 2023 NBA playoffs (WIP)</div>
+	  </a>
         </div>
 
+
         <div class="project">
-          <a href="https://github.com/AlexBradshaw5/database_keys_demo/tree/main">
-            <img src="./project_thumbnails/keys.png">
-          <div class="description">Database Keys Illustration</div>
-          </a>
+          <a href="https://github.com/AlexBradshaw5/Clustering">
+            <img src="./project_thumbnails/kmeans.png">
+          <div class="description">KMeans, KMeans++, Spectral Clustering Illustration From Scratch</div>
+	  </a>
         </div>
 
       </div>
@@ -93,6 +99,20 @@
 <div id="about">
 <p><a href="https://github.com/AlexBradshaw5/Academic_Assignments">Smaller Academic Assignments</a> (*Includes Illustration):</p>
 	<div class="project-row">
+
+        <div class="project-mini">
+          <a href="https://github.com/AlexBradshaw5/database_keys_demo/tree/main">
+            <img src="./project_thumbnails/keys.png">
+          <div class="description">*Database Keys Illustration</div>
+          </a>
+        </div>
+
+        <div class="project-mini">
+          <a href="https://github.com/AlexBradshaw5/Feature_Importance">
+            <img src="./project_thumbnails/feat_imp.png">
+          <div class="description">*Value of Feature Importance</div>
+          </a>
+        </div>
 
         <div class="project-mini">
           <a href="https://github.com/AlexBradshaw5/Academic_Assignments/tree/main/Gradient_Methods">
