--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="about">
       <p>About Me:</p>
   	<p>
-I was born and raised in San Francisco and attended the University of San Francisco where I obtained a Master's in Data Science (graduated with distinction) and a Bachelor's in Mathematics with a minor in Computer Science. I chose to pursue a career in Data Science because of my passion for problem solving and computer programming. In high school, my strategic and calculated approach to pitching earned me back-to-back Pitcher of the Year honors, 3 city championships, and a walk-on roster spot in USF's D1 baseball program. I use the competitive mindset I've developed from baseball into being the best at whatever I choose to do. Here, you'll find a collection showcasing some of my work in Data Science and Analytics.
+I was born and raised in San Francisco and attended the University of San Francisco where I obtained a Master's in Data Science (graduated with distinction) and a Bachelor's in Mathematics with a minor in Computer Science. I chose to pursue a career in Data Science because of my passion for problem solving and computer programming. In high school, my strategic and calculated approach to pitching honored me back-to-back Pitcher of the Year awards, 3 city championships, and a walk-on roster spot in USF's D1 baseball program. I use the competitive mindset I've developed from baseball into being the best at whatever I choose to do. Here, you'll find my portfolio showcasing some of my work in Data Science and Analytics.
 	</p>
 	<p>For sports people, check out my <a href="baseball.html">baseball credentials here</a>!</p>
     </div>
