changed Including to Considering

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I was born and raised in San Francisco and attended the University of San Franci
           </a>
           <div class="description">
 	  <a href="https://github.com/AlexBradshaw5/enhance-mint">
-		Why Including Race is the Most Fair and Beneficial Admission Process</a>
+		Why Considering Race in Applications is the Most Fair and Beneficial Admission Process</a>
 	  </div>
         </div>
 
